// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListCategories lists all Categories 1`] = `
Object {
  "data": Object {
    "ListCategories": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "c3",
          },
        },
        Object {
          "node": Object {
            "id": "c2",
          },
        },
        Object {
          "node": Object {
            "id": "c1",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`ListCategories sorts 1`] = `
Object {
  "data": Object {
    "ListCategories": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "c2",
          },
        },
        Object {
          "node": Object {
            "id": "c1",
          },
        },
        Object {
          "node": Object {
            "id": "c3",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`ListCategories supports after 1`] = `
Object {
  "data": Object {
    "ListCategories": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "c1",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`ListCategories supports before 1`] = `
Object {
  "data": Object {
    "ListCategories": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "c3",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;
